tests/baselines/reference/isolatedModulesImportExportElision.errors.txt
tests/cases/compiler/file1.ts(1,17): error TS2307: Cannot find module 'module'.
tests/cases/compiler/file1.ts(2,18): error TS2307: Cannot find module 'module'.
tests/cases/compiler/file1.ts(3,21): error TS2307: Cannot find module 'module'.
tests/cases/compiler/file1.ts(11,18): error TS2307: Cannot find module 'module'.


==== tests/cases/compiler/file1.ts (4 errors) ====
    import {c} from "module"
                    ~~~~~~~~
!!! error TS2307: Cannot find module 'module'.
    import {c2} from "module"
                     ~~~~~~~~
!!! error TS2307: Cannot find module 'module'.
    import * as ns from "module"
                        ~~~~~~~~
!!! error TS2307: Cannot find module 'module'.
    
    class C extends c2.C {
    }
    
    let x = new c();
    let y = ns.value;
    
    export {c1} from "module";
                     ~~~~~~~~
!!! error TS2307: Cannot find module 'module'.
    export var z = x;